# batalhaNaval

./: .clang-format  .gitignore  CMakeLists.txt  makefile
include/: colors.hpp  handleInput.hpp  player.hpp  terminalGame.hpp
include/players/: computer.hpp  human.hpp  player.hpp
include/ships/: battleship.hpp  carrier.hpp  destroyer.hpp  patrolBoat.hpp  ship.hpp  submarine.hpp
src/: main.cpp  player.cpp  ship.cpp
src/players/: computer.cpp  human.cpp  player.cpp
