cmake_minimum_required(VERSION 3.21.1)
project(main)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-Wall")
add_executable(main ./src/main.cpp ./src/players/player.cpp ./src/players/human.cpp ./src/ship.cpp)
target_include_directories(main $ENV{INCLUDE} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/include/ships ${CMAKE_CURRENT_SOURCE_DIR}/include/players)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON )
